Fix overflow and section alignment

--- a/public/global.css
+++ b/public/global.css
@@ -14,6 +14,7 @@ body {
 	font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	line-height: 1.75;
 	letter-spacing: 0.5px;
+	overflow-x: hidden;
 }
 
 a {
